--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<a href="https://maverickspectacle.github.io/about/">About FallenApollonian</a>
-<a href="https://maverickspectacle.github.io/academia/">Academia</a>
-<a href="https://maverickspectacle.github.io/ai-tools/">AI Tools</a>
-<a href="https://maverickspectacle.github.io/articles-and-data/">Articles and Data</a>
+- [About FallenApollonian](https://maverickspectacle.github.io/about/)
+- [Academia](https://maverickspectacle.github.io/academia/)
+- [AI Tools](https://maverickspectacle.github.io/ai-tools/)
+- [Articles and Data](https://maverickspectacle.github.io/articles-and-data/)
 
 <div class="posts">
   {% for post in site.posts %}
