--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@ layout: default
 - [Academia](https://maverickspectacle.github.io/academia/)
 - [AI Tools](https://maverickspectacle.github.io/ai-tools/)
 - [Articles and Data](https://maverickspectacle.github.io/articles-and-data/)
+- [Blogs](https://maverickspectacle.github.io/blogs)
+- [Climate Change](https://maverickspectacle.github.io/climate-change)
+- [Crime](https://maverickspectacle.github.io/crime)
+- [Democracy](https://maverickspectacle.github.io/democracy)
+- [Economics](https://maverickspectacle.github.io/economics)
+- [Epistemic Progressivism](https://maverickspectacle.github.io/epistemic-progressivism)
+- [Epistemic Progressivism: Supplement](https://maverickspectacle.github.io/epistemic-progressivism-supplement)
+- [Free Speech](https://maverickspectacle.github.io/free-speech)
+- [Gender](https://maverickspectacle.github.io/gender)
+- [Health](https://maverickspectacle.github.io/health)
+- [Philosophy](https://maverickspectacle.github.io/philosophy)
+- [Psychology](https://maverickspectacle.github.io/psychology)
+- [Race](https://maverickspectacle.github.io/race)
+- [Research Questions](https://maverickspectacle.github.io/research-questions)
+- [Understanding the Issue](https://maverickspectacle.github.io/understanding-the-issue)
+- [Violent Resistance](https://maverickspectacle.github.io/violent-resistance) 
 
 <div class="posts">
   {% for post in site.posts %}
