--- a/index.html
+++ b/index.html
@@ -2,26 +2,28 @@
 layout: default
 ---
 
-- [About FallenApollonian](https://maverickspectacle.github.io/about/)
-- [Academia](https://maverickspectacle.github.io/academia/)
-- [AI Tools](https://maverickspectacle.github.io/ai-tools/)
-- [Articles and Data](https://maverickspectacle.github.io/articles-and-data/)
-- [Blogs](https://maverickspectacle.github.io/blogs)
-- [Climate Change](https://maverickspectacle.github.io/climate-change)
-- [Crime](https://maverickspectacle.github.io/crime)
-- [Democracy](https://maverickspectacle.github.io/democracy)
-- [Economics](https://maverickspectacle.github.io/economics)
-- [Epistemic Progressivism](https://maverickspectacle.github.io/epistemic-progressivism)
-- [Epistemic Progressivism: Supplement](https://maverickspectacle.github.io/epistemic-progressivism-supplement)
-- [Free Speech](https://maverickspectacle.github.io/free-speech)
-- [Gender](https://maverickspectacle.github.io/gender)
-- [Health](https://maverickspectacle.github.io/health)
-- [Philosophy](https://maverickspectacle.github.io/philosophy)
-- [Psychology](https://maverickspectacle.github.io/psychology)
-- [Race](https://maverickspectacle.github.io/race)
-- [Research Questions](https://maverickspectacle.github.io/research-questions)
-- [Understanding the Issue](https://maverickspectacle.github.io/understanding-the-issue)
-- [Violent Resistance](https://maverickspectacle.github.io/violent-resistance) 
+<ul>
+  <li><a href="https://maverickspectacle.github.io/about/">About FallenApollonian</a></li>
+  <li><a href="https://maverickspectacle.github.io/academia/">Academia</a></li>
+  <li><a href="https://maverickspectacle.github.io/ai-tools/">AI Tools</a></li>
+  <li><a href="https://maverickspectacle.github.io/articles-and-data/">Articles and Data</a></li>
+  <li><a href="https://maverickspectacle.github.io/blogs">Blogs</a></li>
+  <li><a href="https://maverickspectacle.github.io/climate-change">Climate Change</a></li>
+  <li><a href="https://maverickspectacle.github.io/crime">Crime</a></li>
+  <li><a href="https://maverickspectacle.github.io/democracy">Democracy</a></li>
+  <li><a href="https://maverickspectacle.github.io/economics">Economics</a></li>
+  <li><a href="https://maverickspectacle.github.io/epistemic-progressivism">Epistemic Progressivism</a></li>
+  <li><a href="https://maverickspectacle.github.io/epistemic-progressivism-supplement">Epistemic Progressivism: Supplement</a></li>
+  <li><a href="https://maverickspectacle.github.io/free-speech">Free Speech</a></li>
+  <li><a href="https://maverickspectacle.github.io/gender">Gender</a></li>
+  <li><a href="https://maverickspectacle.github.io/health">Health</a></li>
+  <li><a href="https://maverickspectacle.github.io/philosophy">Philosophy</a></li>
+  <li><a href="https://maverickspectacle.github.io/psychology">Psychology</a></li>
+  <li><a href="https://maverickspectacle.github.io/race">Race</a></li>
+  <li><a href="https://maverickspectacle.github.io/research-questions">Research Questions</a></li>
+  <li><a href="https://maverickspectacle.github.io/understanding-the-issue">Understanding the Issue</a></li>
+  <li><a href="https://maverickspectacle.github.io/violent-resistance">Violent Resistance</a></li>
+</ul>
 
 <div class="posts">
   {% for post in site.posts %}
